# shapezx

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  flake.nix  justfile  vcpkg.json
.devenv/: profile  run
src/: main.cpp  ui.slint
src/core/: core.cpp  core.hpp  equipment.cpp  equipment.hpp  machine.cpp  machine.hpp  ore.cpp  ore.hpp  task.cpp  task.hpp
src/ui/: machine.cpp  machine.hpp
src/vec/: vec.hpp
ui/: app.slint
